--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <tr>
         <td><img src="https://lh3.googleusercontent.com/AHjEKlewl9Mwsr8Hh9IMCu1vqztNRdiUeaF94EiFjoXEmYR8s1wHJ0iRLPvP2NmZyEbPDZf4K0JqOGDwI955gXSz1f1La9HD-mXih9QuhdGJkzlVMb9aP8Leqy887dVvnmFSQYOOOStH59X7KAatpge6C344N5j8Je7ewx4N86BS1Z9l2XBiRL16CSzMzboNz4hgcwiPB5APYX0ZqVcR0NydR6KoxyqahniRwbrQDENfvV_0qIUxuQm11BQym7IJZ_05SUyugnnLD_Q4ZrpNkN--ahcr3U-9wzcXttbm6VKV1vKqjgZSek7XYJ4pasrJMR6Y0QHppCLyRAmqLrrr_23Jq0wezAPTFUcVQSKUMBjNgg3jt-UX7NslCrhtuB0wQo9eodS1z2OtLBdX-GaxIbyTiDOZSltfS7fzxW1Tj-cw9BoVBOpUcicJ0-eb2AL1p2sA7DyB3V0xNuX7Jl-hwQcC4llhI6_4JYAc25FyDOXr6yc6KVDsdtBICkoGFSeN_YHp06BZ270aosIaYH_fmr3CnPofqB5qQTWxB-x59uBQcAywDrZLR9U4uSJq5kd0UxzGtqNalBanMT3evI9fsklCwBByHM2xrONugnyP2P0blHRbUtuHKTMUia584OF7SYQf85IRuMrX_zFZ1sayvNRrgq_O3dZdfcJxqxMNe2PmuIUFcFDTNMQWEuoal8M=s150-no?authuser=0" alt="Lara profile pic"></td>
         <td><h1>Lara John</h1>
-          <p><em><strong>Engineer, Artist</strong></em></p>
+          <p><em><strong>Student, Artist</strong></em></p>
           <p>Aspiring <strong><a href="https://www.isro.gov.in/spacecraft/space-science-exploration"> space scientist</a></strong> |Dancer |Singer |Naturalist</p></td>
       </tr>
     </table>
