--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Lara's personal website</title>
   </head>
-  <body style="background-color: #e9f5f5;">
+  <body>
     <table cellspacing="20">
       <tr>
         <td><img src="https://instagram.fblr15-1.fna.fbcdn.net/v/t51.2885-19/s150x150/96404862_243696906986941_476801044131610624_n.jpg?_nc_ht=instagram.fblr15-1.fna.fbcdn.net&_nc_ohc=_bBieTqETTQAX_1f1-d&oh=698f389313a83dc18679b606f041c060&oe=5F29E6BF" alt="Lara profile pic"></td>
