--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="https://instagram.fblr15-1.fna.fbcdn.net/v/t51.2885-19/s150x150/96404862_243696906986941_476801044131610624_n.jpg?_nc_ht=instagram.fblr15-1.fna.fbcdn.net&_nc_ohc=_bBieTqETTQAX_1f1-d&oh=698f389313a83dc18679b606f041c060&oe=5F29E6BF" alt="Lara profile pic"></td>
+        <td><img src="circle-cropped (1) (1).png" alt="Lara profile pic"></td>
         <td><h1>Lara John</h1>
           <p><em><strong>Student, Artist</strong></em></p>
           <p>Aspiring <strong><a href="https://www.isro.gov.in/spacecraft/space-science-exploration"> space scientist</a></strong> |Dancer |Singer |Naturalist</p></td>
