--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="circle-cropped (1) (1).png" alt="Lara profile pic"></td>
+        <td><img src="circle-cropped (3).png" alt="Lara profile pic" width="150" height="150"></td>
         <td><h1>Lara John</h1>
           <p><em><strong>Student, Artist</strong></em></p>
           <p>Aspiring <strong><a href="https://www.isro.gov.in/spacecraft/space-science-exploration"> space scientist</a></strong> |Dancer |Singer |Naturalist</p></td>
